# linuxCoding

./: CMakeLists.txt  README.md  main.cpp
sources/: cxx11.cpp  fd.cpp  fd.h  proc.cpp  server  serverTcp.cpp  socket.cpp
sources/include/: cxx11.h  proc.h  slc.h  socket.h
textFiles/: fdor0.txt  fdor1.txt
